[package]
name = "mysql_roaring"
version = "0.1.0"
edition = "2021"
build = "./src/doc.rs"
description="Roaring bitmaps as MySQL/MariaDB User Defined Functions"
license-file="LICENSE"
documentation="https://github.com/tarasbogach/mysql_roaring"
homepage="https://github.com/tarasbogach/mysql_roaring"
repository="https://github.com/tarasbogach/mysql_roaring.git"
readme="README.md"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3

[dependencies]
num-traits = "0.2.15"
roaring = {version="0.10.1"} #, features=["simd"]
udf = "0.5.3"
mysql_roaring_macros = {path='./macros', version="0.1.0"}

